@@ -1,3 +1,3 @@
-DOS2UNIX_VERSION = 5.3-beta2
-DOS2UNIX_VERSION_SHORT = 53b2
-DOS2UNIX_DATE = 2011-04-03
+DOS2UNIX_VERSION = 5.3-beta3
+DOS2UNIX_VERSION_SHORT = 53b3
+DOS2UNIX_DATE = 2011-04-04
